# RetroAchievements-ROM-Hasher

./: .gitmodules  LICENSE  README.md  gradle.properties  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ra_hasher_jni.c
app/src/main/java/com/ra/romhasher/: CacheManager.kt  HasherActivity.kt  HasherService.kt  NativeHasher.kt  RAApiClient.kt  RomScanner.kt  SettingsReader.kt
app/src/main/res/values/: strings.xml
